--- a/P1/estilo.css
+++ b/P1/estilo.css
@@ -11,21 +11,20 @@ div{
 }
 
 .cabecera {
+  display: inline-flex;
   font-size: 20px;
 }
 
 .logo{
-
 }
 
+
 .titulo-cabecera {
-  float:none;
   text-align: center;
   background: #f5b505;
 }
 
 .titulo-obra{
-  float:none;
   text-align: center;
   background: #f0c030;
 }
@@ -50,19 +49,18 @@ div{
   border-style: solid;
 }
 
+.secciones{
+  height: auto;
+  width: 100%;
+  display: inline-flex;
+}
+
 .seccion-navegacion{
-  float:left;
-  width: 20%;
-  height: 60%;
   border-color: #00b060;
   border-style: solid;
 }
 
 .seccion-central{
-  float:right;
-  margin-right: 15px;
-  width: 70%;
-  height: 80%;
   border-color: #00b000;
   border-style: solid;
 }
