--- a/P1/estilo.css
+++ b/P1/estilo.css
@@ -9,6 +9,7 @@ html {
 div{
   padding: 0.5em;
   margin: 10px;
+  width: -webkit-fill-available;
 }
 
 .cabecera {
@@ -18,6 +19,7 @@ div{
 }
 
 .logo{
+  width: fit-content;
   border: red;
   border-style: solid;
   text-align: center;
@@ -64,7 +66,7 @@ div{
 }
 
 .seccion-lateral{
-  width: 20%;
+  width: fit-content;
   border-color: #00b060;
   border-style: solid;
 }
@@ -88,7 +90,7 @@ div{
   color: #444;
   border: chartreuse;
   border-style: solid;
-  width: fit-content;
+  width: -webkit-fill-available;
 }
 
 .box {
