--- a/P1/estilo.css
+++ b/P1/estilo.css
@@ -4,6 +4,7 @@ html {
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
   font-size: 16px;
   color: black;
+  background: linear-gradient(to right, rgba(66,66,66,1), rgba(100,100,100,0.2));
 }
 
 div{
@@ -20,8 +21,6 @@ div{
 
 .logo{
   width: fit-content;
-  border: red;
-  border-style: solid;
   text-align: center;
   vertical-align: middle;
 }
@@ -30,14 +29,16 @@ div{
   width: 80%;
   margin-right: 5px;
   text-align: center;
-  background: #f5b505;
+  /*background: #f5b505;*/
+  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
 
 .titulo-obra{
   width: 80%;
   margin-right: 5px;
   text-align: center;
-  background: #f0c030;
+  /*background: #f0c030;*/
+  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
 
 
@@ -54,9 +55,9 @@ div{
   padding: 1em 2em;
   margin-right: 50px;
   font-family: helvetica;
-  font-size: 18px;
+  font-size: 20px;
   display: inherit;
-  border-color: #009020;
+  border-color: #009050;
   border-style: solid;
 }
 
@@ -67,22 +68,31 @@ div{
 
 .seccion-lateral{
   width: fit-content;
+  /*
   border-color: #00b060;
   border-style: solid;
+  */
+  background: linear-gradient(to bottom, rgba(120,80,40,1), rgba(120,80,40,0.2));
+  padding: 1em 1em;
+  font-size: 22px;
 }
 
 .seccion-central{
-  width: fit-content;
+  width: -webkit-fill-available;
+  /*
   border: chartreuse;
   border-style: solid;
-  width: -webkit-fill-available;
+  */
+  background: linear-gradient(to bottom, rgba(130,85,50,0.8), rgba(120,80,40,0.25));
+
 }
 
 .footer{
   position: relative;
-  height: 50px;
+  height: fit-content;;
   clear: both;
-  background: #f0b000;
+  /*background: #f0b000;*/
+  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
   text-align: center;
 }
 
@@ -90,13 +100,12 @@ div{
 /* Estilo definido para el grid de la sección central de contenido */
 .grid {
   display: grid;
-  grid-template-columns: 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px;
-  grid-gap: 15px;
-  background-color: #fff;
-  color: #444;
-  border: chartreuse;
-  border-style: solid;
+  grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 200px 200px 200px;
+  grid-gap: 25px;
+  color: #888;
+  /*border: chartreuse;
+  border-style: solid;*/
   width: -webkit-fill-available;
 }
 
