--- a/P1/estilo.css
+++ b/P1/estilo.css
@@ -1,36 +1,89 @@
 
+/** {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}*/
 
 html {
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
   font-size: 16px;
   color: black;
-  background: linear-gradient(to right, rgba(66,66,66,1), rgba(100,100,100,0.2));
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  background: linear-gradient(to bottom, rgba(66,66,66,1), rgba(100,100,100,0.2));
 }
 
 div{
-  padding: 0.5em;
   margin: 10px;
-  width: -webkit-fill-available;
+  width: auto;
+  overflow: auto;
+  /*border-style: solid;*/
 }
 
 .cabecera {
-  width: -webkit-fill-available;
-  display: inline-flex;
-  font-size: 20px;
+  margin: inherit;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
 
-.logo{
-  width: fit-content;
+.logo {
+  margin: inherit;
   text-align: center;
+  overflow: unset;
+}
+
+.imagen {
+  margin: auto;
+  display: table;
+  width: 100%;
+  opacity: 0.7;
+  transition: opacity 0.9s;
+}
+
+.imagen:hover {
+  opacity: 1;
+  transition: opacity 0.4s;
+}
+
+img {
+  display: table-cell;
+  margin: auto;
+  top: 0px;
+  bottom: 0;
+  left: 0;
+  right: 0;
   vertical-align: middle;
+  overflow: unset;
 }
 
 .titulo-cabecera {
-  width: 80%;
-  margin-right: 5px;
+  height: auto;
+  display: grid;
+  grid-template-rows: 2fr 1fr;
   text-align: center;
-  /*background: #f5b505;*/
-  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
+  font-style: oblique;
+  font-variant: small-caps;
+  font-size: 20px;
+}
+
+.titulo {
+  height: fit-content;
+  letter-spacing: 10px;
+  font-family: serif;
+}
+
+.navbar{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.navitem{
+  letter-spacing: 3px;
+  color: black;
+  border-color: #009050;
+  border-style: solid;
 }
 
 .titulo-obra{
@@ -38,43 +91,68 @@ div{
   margin-right: 5px;
   text-align: center;
   /*background: #f0c030;*/
-  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
+  background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
 
-
-.menu{
-
-}
-
-.navbar{
-  display: inline-flex;
-
-}
-
-.navitem{
-  padding: 1em 2em;
-  margin-right: 50px;
-  font-family: helvetica;
+a{
+  text-align: center;
+  text-decoration: none;
+  align-items: center;
+  text-transform: capitalize;
   font-size: 20px;
   display: inherit;
-  border-color: #009050;
-  border-style: solid;
+  color: black;
+  transition: background-color .7s, color .7s !important;
+}
+
+a.active{
+  background-color: #4CAF50;
+}
+
+a:hover {
+  background-color: grey;
+  color: red;
+  transition: background-color .7s, color .7s !important;
 }
 
 .secciones {
-  display: inline-flex;
-  width: -webkit-fill-available;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
 }
 
 .seccion-lateral{
   width: fit-content;
-  /*
-  border-color: #00b060;
-  border-style: solid;
-  */
-  background: linear-gradient(to bottom, rgba(120,80,40,1), rgba(120,80,40,0.2));
+  display: grid;
+  grid-auto-rows: max-content;
+  grid-gap: 2em;
   padding: 1em 1em;
-  font-size: 22px;
+  background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
+}
+
+.clearfix {
+  height: 10px;
+  width: auto;
+}
+
+.seccion-lateral div {
+  min-width: 170px;
+  width: fit-content;
+  overflow: unset;
+  margin-left: -5%;
+  margin-right: -5%;
+}
+
+.seccion-lateral div h3{
+  padding: 5%;
+  color: orangered;
+  text-decoration: underline;
+  text-shadow: 4px 2px 6px black;
+}
+
+div.seccion-lateral .navitem{
+  border-style: outset;
+  border-color: orangered;
+  box-shadow: 5px 6px 10px #451e00;
 }
 
 .seccion-central{
@@ -83,40 +161,101 @@ div{
   border: chartreuse;
   border-style: solid;
   */
-  background: linear-gradient(to bottom, rgba(130,85,50,0.8), rgba(120,80,40,0.25));
-
+  background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
-
-.obra-text{
-  font-size: 22px;
-}
-
-.footer{
-  position: relative;
-  height: fit-content;;
-  clear: both;
-  /*background: #f0b000;*/
-  background: linear-gradient(to right, rgba(100,66,33,1), rgba(100,66,33,0.3));
-  text-align: center;
-}
-
 
 /* Estilo definido para el grid de la sección central de contenido */
 .grid {
   display: grid;
-  grid-template-columns: 250px 250px 250px;
-  grid-template-rows: 250px 250px 250px;
-  grid-gap: 30px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 5%;
   color: #888;
-  /*border: chartreuse;
-  border-style: solid;*/
-  width: -webkit-fill-available;
 }
 
 .box {
   background-color: #444;
-  color: #fff;
+  color: transparent;
   border-radius: 5px;
-  padding: 20px;
-  font-size: 150%;
+  font-size: 2vw;
+  text-align: center;
+  display: inline-grid;
+  align-items: center;
+  transition: color 0.9s;
+  overflow: unset;
+  border-style: solid;
+}
+
+.box:hover {
+  color: white;
+  transition: color 0.9s;
+}
+
+.footer{
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 0.5fr 1fr;
+  /*grid-template-rows: 8fr 1fr;*/
+  text-align: center;
+  align-items: center;
+  background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
+}
+
+#informacion {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  font-size: 1.2vw;
+  overflow: unset;
+}
+
+p {
+  text-rendering: optimizeLegibility;
+  letter-spacing: 1px;
+}
+
+.bold{
+  font-weight: bold;
+  text-align: left;
+}
+
+.map {
+  max-height:150px;
+  width: 100%;
+  height: auto;
+  object-fit: none;
+}
+
+#copyright {
+  text-align: center;
+  text-overflow: clip;
+  font-size: 14px;
+  font-style: italic;
+  opacity: 0.7;
+}
+
+#rrss {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 2vw;
+  margin: auto;
+}
+
+#scroll {
+  display: block;                   /* Hidden by default */
+  position: fixed;                  /* Fixed/sticky position */
+  bottom: 20px;                     /* Place the button at the bottom of the page */
+  right: 30px;                      /* Place the button 30px from the right */
+  z-index: 99;                      /* Make sure it does not overlap */
+  border: none;                     /* Remove borders */
+  background-color: transparent;    /* Set a background color */
+  cursor: pointer;                   /* Add a mouse pointer on hover */
+  padding: 15px;                     /* Some padding */
+  border-radius: 100%;               /* Rounded corners */
+  background-image: url("icons/arrow.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#scroll:hover {
+  background-color: grey;            /* Add a dark-grey background on hover */
 }
