--- a/P1/estilo.css
+++ b/P1/estilo.css
@@ -16,13 +16,11 @@ html {
 
 div{
   margin: 10px;
-  width: auto;
-  overflow: auto;
   /*border-style: solid;*/
 }
 
 .cabecera {
-  margin: inherit;
+  /*margin: inherit;*/
   display: grid;
   grid-template-columns: 1fr 3fr;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
@@ -35,7 +33,7 @@ div{
 }
 
 .imagen {
-  margin: auto;
+  /*margin: auto;*/
   display: table;
   width: 100%;
   opacity: 0.7;
@@ -59,7 +57,7 @@ img {
 }
 
 .titulo-cabecera {
-  height: auto;
+  /*height: auto;*/
   display: grid;
   grid-template-rows: 2fr 1fr;
   text-align: center;
@@ -119,7 +117,7 @@ a:hover {
   display: grid;
   grid-auto-rows: max-content;
   grid-gap: 2em;
-  padding: 1em 1em;
+  padding: 1em 1.5em;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
 }
 
