--- a/P1/estilo_obra.css
+++ b/P1/estilo_obra.css
@@ -25,7 +25,7 @@
 .meta-obra {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 4fr;
-  height: 90%;
+  height: auto;
   align-items: center;
 }
 
@@ -50,6 +50,8 @@
   height: 95%;
   width: 95%;
   object-fit: scale-down;
+  overflow: unset;
+  place-self: center;
 }
 
 .descripcion-obra {
