--- a/P1/web/css/estilo_obra.css
+++ b/P1/web/css/estilo_obra.css
@@ -1,6 +1,7 @@
 
 .obra div {
   overflow: unset !important;
+  height: fit-content;
   /*border-style: solid;*/
 }
 
@@ -13,20 +14,21 @@
   grid-template-rows: 9fr 1fr;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
   overflow: unset;
+  align-items: center;
 }
 
 .encabezado-imagen {
   display: grid;
   grid-template-columns: 3fr 4fr;
   text-align: center;
-  align-items: center;
+  /*align-items: center;*/
 }
 
 .meta-obra {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 4fr;
-  height: auto;
-  align-items: center;
+  grid-template-rows: 1fr 0.5fr 0.5fr 2fr;
+  /*height: auto;*/
+  /*align-items: center;*/
 }
 
 
