--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -1,10 +1,4 @@
 
-/** {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}*/
-
 html {
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
   font-size: 16px;
@@ -16,11 +10,13 @@ html {
 
 div{
   margin: 10px;
-  /*border-style: solid;*/
+}
+
+h1 {
+  font-variant: small-caps;
 }
 
 .cabecera {
-  /*margin: inherit;*/
   display: grid;
   grid-template-columns: 1fr 3fr;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
@@ -33,7 +29,6 @@ div{
 }
 
 .imagen {
-  /*margin: auto;*/
   display: table;
   width: 100%;
   opacity: 0.8;
@@ -57,7 +52,6 @@ img {
 }
 
 .titulo-cabecera {
-  /*height: auto;*/
   display: grid;
   grid-template-rows: 2fr 1fr;
   text-align: center;
@@ -253,4 +247,32 @@ p {
 
 #scroll:hover {
   background-color: grey;            /* Add a dark-grey background on hover */
+}
+
+.colecciones {
+  display: grid;
+  grid-auto-rows: 1fr;
+}
+
+.colecciones div {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  text-align: justify;
+}
+
+.titulo {
+  font-variant: small-caps;
+}
+
+.titulo p {
+  text-align: center;
+  align-self: center;
+}
+
+.fechas {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  text-align: center;
+  font-variant: all-small-caps;
 }
