--- a/web/css/estilo_obra.css
+++ b/web/css/estilo_obra.css
@@ -2,16 +2,11 @@
 .obra div {
   overflow: unset !important;
   height: fit-content;
-  /*border-style: solid;*/
 }
-
-/*.obra p {
-  border-style: dashed;
-}*/
 
 .obra {
   display: grid;
-  grid-template-rows: 9fr 1fr;
+  grid-template-rows: 9fr 1fr 1fr;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
   overflow: unset;
   align-items: center;
@@ -21,16 +16,12 @@
   display: grid;
   grid-template-columns: 3fr 4fr;
   text-align: center;
-  /*align-items: center;*/
 }
 
 .meta-obra {
   display: grid;
   grid-template-rows: 1fr 0.5fr 0.5fr 2fr;
-  /*height: auto;*/
-  /*align-items: center;*/
 }
-
 
 #titulo-obra {
   text-transform: uppercase;
@@ -44,7 +35,6 @@
   text-transform: capitalize;
   display: inline;
 }
-
 
 .imagen-obra {
   max-height: 680px;
@@ -183,4 +173,81 @@ textarea {
   width: 100%;
   font-weight: bold;
   font-size: 17px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+.compartir {
+  display: grid;
+  grid-template-rows: 1fr 1fr 2fr 1fr;
+  text-align: center;
+  font-variant: all-small-caps;
+  font-size: 24px;
 }
