--- a/web/css/estilo_obra.css
+++ b/web/css/estilo_obra.css
@@ -1,27 +1,34 @@
 
 .obra div {
   overflow: unset !important;
-  height: fit-content;
+  /*border-style: solid;*/
 }
+
+/*.obra p {
+  border-style: dashed;
+}*/
 
 .obra {
   display: grid;
-  grid-template-rows: 9fr 1fr 1fr;
+  grid-template-rows: 9fr 1fr;
   background: linear-gradient(to bottom, rgba(100,66,33,1), rgba(100,66,33,0.3));
   overflow: unset;
-  align-items: center;
 }
 
 .encabezado-imagen {
   display: grid;
   grid-template-columns: 3fr 4fr;
   text-align: center;
+  align-items: center;
 }
 
 .meta-obra {
   display: grid;
-  grid-template-rows: 1fr 0.5fr 0.5fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr 4fr;
+  height: auto;
+  align-items: center;
 }
+
 
 #titulo-obra {
   text-transform: uppercase;
@@ -35,6 +42,7 @@
   text-transform: capitalize;
   display: inline;
 }
+
 
 .imagen-obra {
   max-height: 680px;
@@ -54,196 +62,4 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em;
-}
-
-.gestor {
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr !important;
-}
-
-#btn_comentarios {
-  cursor: pointer;
-  border-top-left-radius: 100%;
-  border-bottom-left-radius: 100%;
-  background-color: burlywood;
-  border-style: groove;
-  border-color: orangered;
-}
-
-#desplegable-comentarios {
-  display:grid;
-  grid-template-columns: 1fr 21fr;
-  position: fixed;
-  z-index: 99;                  /* Make sure it does not overlap */
-  transition: left 2s;
-  transition-timing-function: ease;
-  max-height: 600px;
-  overflow: hidden;
-
-  /* Código para centrar la sección de comentarios en la pantalla */
-  width: 900px;
-  height: 600px;
-  top: 50%;
-  left: 116%;                   /* Cambiará a 50% al ser desplegado */
-  margin-top: -300px;           /* Negative half of height. */
-  margin-left: -19%;            /* Negative half of width. */
-  display: grid;
-}
-
-#contenedor-comentarios {
-  background-color: burlywood;
-  border-style: groove;
-  border-color: orangered;
-  border-left-color: transparent;
-  margin-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-#comentarios {
-  overflow-y: scroll;
-  display: grid;
-  grid-auto-rows: 1fr;
-  grid-row-gap: 10px;
-  max-width: 830px;
-  max-height: 340px;
-  width: 830px;
-  height: 330px;
-}
-
-.comentario {
-  display: grid;
-  grid-auto-rows: 1fr 2fr;
-  border-style: groove;
-  border-color: threedface;
-  border-bottom-color: grey;
-}
-
-.comentario-fecha {
-  display: grid;
-  grid-template-columns: 5fr 5fr 1fr 1fr;
-  text-align: center;
-  font-weight: bold;
-  font-style: italic;
-}
-
-.texto {
-  text-align: justify;
-  font-variant: all-petite-caps;
-  text-rendering: optimizeLegibility;
-  font-size: 17px;
-}
-
-#formulario {
-  border-top-style: groove;
-  border-top-color: orangered;
-  position: relative;
-
-  width: 90%;
-  margin-left: 3.5%;
-}
-
-#personal-info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-variant: small-caps;
-  font-style: oblique;
-  font-weight: bold;
-  font-size: 17px;
-}
-/*
-input {
-  width: 280px;
-}*/
-
-input[name="nombre"] {
-  text-transform: capitalize !important;
-}
-
-textarea {
-  resize: none;
-  width: 90%;
-  height: 10%;
-  margin-left: 2.5%;
-  margin-bottom: 2%;
-}
-
-#boton {
-  margin-bottom: 0;
-}
-
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-/* The Close Button */
-.close {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.modal-header {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-}
-
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-}
-
-.compartir {
-  display: grid;
-  grid-template-rows: 1fr 1fr 2fr 1fr;
-  text-align: center;
-  font-variant: all-small-caps;
-  font-size: 24px;
 }
