--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -1,103 +1,125 @@
 
-/** {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}*/
+/*****************************************************************************
+  CÓDIGO SANEADO
+*****************************************************************************/
 
 html {
-  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
-  font-size: 16px;
-  color: black;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  background: #333;
+  height: 100%;
+  width: 100%;
 }
 
-div{
-  margin: 10px;
-  /*border-style: solid;*/
+body {
+  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+  font-size: 16px;
+  color: #fbfbfb;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  background: #333 url(../imgs/fondo.gif) center fixed;
+  background-size: 100% 100%;
+  margin: 0%;
+}
+
+.cabecera,
+.seccion-lateral,
+/* .seccion-noticias, */
+.footer {
+  background: rgba(80, 80, 80, 0.5);
 }
 
 .cabecera {
-  /*margin: inherit;*/
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  background: linear-gradient(to bottom, rgb(250, 250, 250), rgb(255, 255, 255));
+  margin: inherit;
+  display: flex;
+  /* background: rgba(80, 80, 80, 0.5); */
+  width: 100%;
+  height: 25%;
+  /* position: absolute; */
 }
 
 .logo {
-  margin: inherit;
-  text-align: center;
-  overflow: unset;
+  height: 100%;
+  width: 30%;
 }
 
-.imagen {
-  /*margin: auto;*/
-  display: table;
-  width: 100%;
-  opacity: 0.8;
-  transition: opacity 0.5s;
-}
-
-.imagen:hover {
-  opacity: 1;
-  transition: opacity 0.5s;
+.logo img {
+  max-width: 60%;
+  position: inherit;
+  width: 50%;
+  height: 100%;
 }
 
 img {
-  display: table-cell;
-  margin: auto;
-  top: 0px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  max-width: 80%;
-  vertical-align: middle;
-  overflow: unset;
+  heigth: 100%;
+  width: 100%;
+  object-fit: fill;
+  border-radius: 5px;
 }
 
-.titulo-cabecera {
-  /*height: auto;*/
-  display: grid;
-  grid-template-rows: 2fr 1fr;
+.meta-cabecera {
+  width: 70%;
+  font-family: "Roboto_condensed";
   text-align: center;
-  font-family: "Roboto_condensed";
-  font-variant: inherit;
-  font-size: 150%;
 }
 
-.titulo {
-  height: fit-content;
-  height: -moz-fit-content;
-  letter-spacing: 7px;
-  font-family: "Roboto_condensed";
+.contenedor-titulo {
+  height: 70%;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  position: relative;
 }
 
-.navbar{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  height: auto;
 }
 
-.navitem{
+.navbar {
+  display: flex;
+  height: 30%;
+  width: 100%;
+  background: rgba(80, 80, 80, 0.9);
+  position: relative;
+}
+
+.navitem {
   letter-spacing: 3px;
-  color: black;
+  color: inherit;
   border-color: #410505;
-  border-style: solid;
+  border-style: outset;
+  box-sizing: border-box;
+  position: relative;
+  background: rgba(80, 80, 80, 0.9);
 }
 
-a{
+.navitem a {
+  display: block;
+  color: inherit;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+
+a {
   text-align: center;
   text-decoration: none;
   align-items: center;
-  text-transform: capitalize;
-  font-size: 20px;
-  display: inherit;
-  color: black;
+  font-size: 2vw;
+  display: block;
+  color: inherit;
   transition: background-color .7s, color .7s !important;
+  height: 100%;
+  width: 100%;
 }
 
-a.active{
+a.active {
   background-color: #941429;
 }
 
@@ -107,135 +129,95 @@ a:hover {
   transition: background-color .7s, color .7s !important;
 }
 
-.secciones {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-}
-
-.seccion-lateral{
-  width: fit-content;
-  width: -moz-fit-content;
-  display: grid;
-  grid-auto-rows: max-content;
-  grid-gap: 2em;
-  padding: 1em 1.5em;
-  background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(255, 255, 255));
-}
-
-.clearfix {
-  height: 10px;
-  width: auto;
-}
-
-.seccion-lateral div {
-  min-width: 170px;
-  width: fit-content;
-  width: -moz-fit-content;
-  overflow: unset;
-  margin-left: -5%;
-  margin-right: -5%;
-}
-
-.seccion-lateral div h3{
-  padding: 5%;
-  color: #009050;
-  text-decoration: underline;
-  text-shadow: 4px 2px 6px black;
-}
-
-div.seccion-lateral .navitem{
-  border-style: outset;
-  border-color: #333;
-  box-shadow: 5px 6px 10px #333;
-}
-
-/* Estilo definido para el grid de la sección central de contenido */
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 5%;
-  color: #333;
-}
-
-.box {
-  display: grid;
-  grid-template-rows: 16fr 2fr;
-  width: 100%;
-  background-color: #333;
-  color: transparent;
-  border-radius: 5px;
-  font-size: 2vw;
-  text-align: center;
-  align-items: center;
-  transition: color 0.9s;
-  overflow: unset;
-  border-style: solid;
-}
-
-.box:hover {
-  color: white;
-  transition: color 0.9s;
-}
-
-.titulo-obra {
-  text-transform: capitalize;
-  font-family: serif;
-  font-weight: bolder;
-  font-style: italic;
-  font-size: 16px;
-}
-
-.footer{
-  display: grid;
-  grid-template-columns: 2fr 2fr 2fr 0.5fr 1fr;
-  text-align: center;
-  align-items: center;
-  color:rgb(250, 250, 250);
-  background:rgba(148, 7, 7, 0.459)
-}
-
-#informacion {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 2fr;
-  grid-column-gap: 10px;
-  font-size: 1.2vw;
-  text-align: left;
-  overflow: unset;
-}
-
 p {
   text-rendering: optimizeLegibility;
   letter-spacing: 1px;
+  margin: 0;
+  margin-bottom: 1vw;
 }
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+/* a p {
+  text-align: justify;
+  margin: 10px;
+  font-size: 1.3vw;
+} */
 
 .bold{
   font-weight: bold;
-  text-align: left;
+  margin-bottom: 0.3vw;
 }
 
-.map {
-  max-height:150px;
+.footer{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  /* background: rgba(80, 80, 80, 0.5); */
   width: 100%;
-  height: auto;
+  height: 20%;
+  position: absolute;
+}
+
+.footer div {
+  height: 90%;
+  width: 90%;
+}
+
+#informacion {
+  display: block;
+  width: 25%;
+  font-size: 0.8vw;
+}
+
+#informacion .bold {
+  border-bottom-color: #410505;
+  border-bottom-style: double;
+  border-bottom-width: 1px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+#mapa {
+  width: 25%;
+}
+
+#mapa img {
   object-fit: none;
+  height: inherit;
+  width: inherit;
 }
 
 #copyright {
-  text-align: center;
-  text-overflow: clip;
-  font-size: 14px;
+  width: 25%;
+  position: relative;
+  font-size: 0.8vw;
   font-style: italic;
-  opacity: 0.7;
 }
 
 #rrss {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 2vw;
-  margin: auto;
+  display: block;
+  width: 5%;
 }
+
+#rrss a {
+  height: 30%;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+#rrss img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.footer .logo {
+  width: 20%;
+}
+
 
 #scroll {
   display: block;                   /* Hidden by default */
@@ -248,11 +230,99 @@ p {
   cursor: pointer;                   /* Add a mouse pointer on hover */
   padding: 15px;                     /* Some padding */
   border-radius: 100%;               /* Rounded corners */
-  background-image: url("./icons/arrow.png");
+  background-image: url("../icons/arrow.png");
   background-repeat: no-repeat;
   background-position: center;
 }
 
 #scroll:hover {
   background-color: grey;            /* Add a dark-grey background on hover */
+}
+
+/*****************************************************************************
+  SECCIÓN CENTRAL
+*****************************************************************************/
+
+.principal {
+  display: flex;
+  width: 100%;
+  height: 55%;
+  margin: 2% 0%;
+}
+
+.seccion-lateral {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: auto;
+  position: relative;
+  text-align: center;
+  align-items: center;
+}
+
+.seccion-lateral h3{
+  text-decoration: underline;
+}
+
+.clearfix {
+  height: 50px;
+  width: 100%;
+}
+
+.seccion-lateral .navitem {
+  box-shadow: 0px 5px 10px #410505;
+  width: 90%;
+  height: 25%;
+  min-height: 120px;
+  margin-bottom: 25px;
+}
+
+/**************************************************************************/
+/*****************************************************************************
+CÓDIGO SIN SANEAR
+*****************************************************************************/
+
+/* Estilo definido para el grid de la sección central de contenido */
+.seccion-noticias {
+  display: block;
+  width: 80%;
+  height: 100%;
+}
+
+.fila {
+  display: flex;
+  width: 90%;
+  height: 33%;
+  position: relative;
+  align-items: center;
+  margin-left: 5%;
+}
+
+.box {
+  display: block;
+  width: 30%;
+  height: 30%;
+  /* min-width: 200px; */
+  max-width: 400px;
+  /* min-height: 200px; */
+  max-height: 400px;
+  color: inherit;
+  border-radius: 5px;
+  font-size: 1.5vw;
+  text-align: center;
+  align-items: center;
+  transition: opacity 0.9s;
+  opacity: 0.8;
+  background: rgba(80, 80, 80, 0.5);
+  margin: 2%;
+}
+
+.box:hover {
+  opacity: 1;
+  transition: opacity 0.9s;
+  background: rgba(80, 80, 80, 0.9);
+}
+
+.box p {
+  margin: 2% 5%;
 }
