--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,6 +18,7 @@ body {
   background: #333 url(../imgs/fondo.gif) center fixed;
   background-size: 100% 100%;
   margin: 0%;
+  height: 100%;
 }
 
 .cabecera,
@@ -36,25 +37,23 @@ body {
 
 .logo {
   height: 100%;
-  width: 30%;
+  width: 20% !important;
 }
 
 .logo img {
-  max-width: 60%;
-  position: inherit;
-  width: 50%;
+  max-width: 80%;
   height: 100%;
 }
 
 img {
   heigth: 100%;
   width: 100%;
-  object-fit: fill;
+  object-fit: contain;
   border-radius: 5px;
 }
 
 .meta-cabecera {
-  width: 70%;
+  width: 80%;
   font-family: "Roboto_condensed";
   text-align: center;
 }
@@ -65,11 +64,7 @@ img {
   margin-top: 0%;
   margin-bottom: 0%;
   position: relative;
-}
-
-h1 {
-  width: 100%;
-  font-size: 5vw;
+  text-transform: uppercase;
 }
 
 .center {
@@ -92,21 +87,11 @@ h1 {
 }
 
 .navitem {
-  letter-spacing: 3px;
-  color: inherit;
   border-color: #410505;
   border-style: outset;
   box-sizing: border-box;
   position: relative;
   background: rgba(80, 80, 80, 0.9);
-}
-
-.navitem a {
-  display: block;
-  color: inherit;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
 
 .active {
@@ -115,8 +100,9 @@ h1 {
 
 a {
   text-align: center;
-  text-decoration: none;
-  align-items: center;
+  /* 26 Mar */
+  /* text-decoration: none;
+  align-items: center; */
   font-size: 2vw;
   display: block;
   color: inherit;
@@ -139,12 +125,13 @@ p {
   text-rendering: optimizeLegibility;
   letter-spacing: 1px;
   margin: 0;
-  margin-bottom: 1vw;
+  /* margin-bottom: 1vw; */
 }
 
-p:last-child {
+/* 26 Mar
+ p:last-child {
   margin-bottom: 0;
-}
+} */
 
 /* a p {
   text-align: justify;
@@ -152,12 +139,16 @@ p:last-child {
   font-size: 1.3vw;
 } */
 
-.bold{
+.bold {
   font-weight: bold;
   margin-bottom: 0.3vw;
 }
 
-.footer{
+.parrafo {
+  margin-bottom: 2vw;
+}
+
+.footer {
   display: flex;
   text-align: center;
   align-items: center;
@@ -174,7 +165,9 @@ p:last-child {
 .contenedor-columna-3 {
   height: 30%;
   width: 90%;
-  min-height: 10px;
+  /* min-height: 10px; */
+  display: inline-block;
+  position: relative;
 }
 
 #informacion {
@@ -187,12 +180,19 @@ p:last-child {
   border-bottom-color: #410505;
   border-bottom-style: double;
   border-bottom-width: 1px;
-  margin-left: 15px;
-  margin-right: 15px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
 }
 
 #mapa {
   width: 25%;
+  opacity: 0.7;
+  transition: opacity .8s;
+}
+
+#mapa:hover {
+  opacity: 1;
+  transition: opacity .8s;
 }
 
 #mapa img {
@@ -206,6 +206,7 @@ p:last-child {
   position: relative;
   font-size: 0.8vw;
   font-style: italic;
+  padding-top: 1%;
 }
 
 #rrss {
@@ -214,9 +215,8 @@ p:last-child {
 }
 
 #rrss a {
-  height: 30%;
+  height: 100%;
   width: 100%;
-  margin-bottom: 5px;
 }
 
 #rrss img {
@@ -224,11 +224,6 @@ p:last-child {
   width: 100%;
   object-fit: contain;
 }
-
-.footer .logo {
-  width: 20%;
-}
-
 
 #scroll {
   display: block;                   /* Hidden by default */
@@ -257,7 +252,7 @@ p:last-child {
 .principal {
   display: flex;
   width: 100%;
-  height: 55%;
+  min-height: 55%;
   margin: 2% 0%;
 }
 
@@ -265,19 +260,13 @@ p:last-child {
   display: flex;
   flex-direction: column;
   width: 20%;
-  height: auto;
-  position: relative;
-  text-align: center;
+  height: inherit;
   align-items: center;
 }
 
 .seccion-lateral h3{
   text-decoration: underline;
-}
-
-.clearfix {
-  height: 50px;
-  width: 100%;
+  font-size: 2.5vw;
 }
 
 .seccion-lateral .navitem {
@@ -288,22 +277,16 @@ p:last-child {
   margin-bottom: 25px;
 }
 
-/**************************************************************************/
-/*****************************************************************************
-CÓDIGO SIN SANEAR
-*****************************************************************************/
-
-/* Estilo definido para el grid de la sección central de contenido */
 .seccion-noticias {
   display: block;
   width: 80%;
-  height: 100%;
+  height: inherit;
 }
 
 .fila {
   display: flex;
   width: 90%;
-  height: 33%;
+  /* height: 33%; */
   position: relative;
   align-items: center;
   margin-left: 5%;
@@ -312,12 +295,8 @@ CÓDIGO SIN SANEAR
 .box {
   display: block;
   width: 30%;
-  height: 30%;
-  /* min-width: 200px; */
-  max-width: 400px;
-  /* min-height: 200px; */
-  max-height: 400px;
-  color: inherit;
+  height: 100%;
+  /* color: inherit; */
   border-radius: 5px;
   font-size: 1.5vw;
   text-align: center;
@@ -336,4 +315,13 @@ CÓDIGO SIN SANEAR
 
 .box p {
   margin: 2% 5%;
+}
+
+
+/*
+* === UTILIDADES ===
+*/
+.clearfix {
+  height: 50px;
+  width: 100%;
 }
