--- a/css/estilo_noticia.css
+++ b/css/estilo_noticia.css
@@ -31,13 +31,12 @@ header h3 {
   display: flex;
   width: 100%;
   height: 10%;
-
-  margin-top: 2%
 }
 
 .enlaces a img {
   all: unset;
-  margin-top: 2%;
+  width: 10%;
+  height: 100%;
 }
 
 
