--- a/vista/404.twig
+++ b/vista/404.twig
@@ -1,6 +1,13 @@
 {# 404.twig #}
 
-<div class="principal not-found">
+{% extends "layout.twig" %}
 
+{% block principal %}
+
+<div class="not-found">
+
+<img src="https://cdn.dribbble.com/users/479289/screenshots/4849417/008_optimize.gif"/>
 
 </div>
+
+{% endblock %}
