--- a/vista/noticia.twig
+++ b/vista/noticia.twig
@@ -1,99 +1,110 @@
 {# noticia.twig #}
 
-{% block noticia %}
-
-<head>
-  <link rel="stylesheet" type="text/css" href="css/estilo_noticia.css">
-</head>
-
-<!-- NOTICIA: comienzo  -->
-<div class="seccion-noticias">
-  <div class="noticia">
-
-    <article>
-      <header>
-        <h1>{{ noticia.titulo }}</h1>
-        <h2>Escrito por {{ noticia.autor }}</h2>
-          <h3>{{ noticia.fecha }}</h3>
-        <div class="contenedor-fila-2">
-          <h4>Etiquetas: {{ noticia.etiquetas }}</h4>
-          <h4>{{ noticia.visitas }} visitas</h4>
-        </div>
-        <div class="contenedor-imagen">
-          <a href="{{ noticia.enlace }}">
-            <img src="{{ noticia.imagen }}" alt=""/>
-          </a>
-        </div>
-
-        {% for parrafo in noticia.texto %}
-        <p class="parrafo">
-          {{  parrafo }}
-        </p>
-        {% endfor %}
-      </header>
-    </article>
-
-  </div>
+{% extends "layout.twig" %}
 
 
-  <!-- Enlaces -->
-  <div class="enlaces">
-
-    <a href="https://www.facebook.com/" target="_blank" title="Compartir en Facebook"
-      onclick="compartir('Twitter', '{{ noticia.titulo }}', '{{ noticia.imagen }}'); return false;">
-
-      <img src="/media/icons/fb_ico.png"/>
-    </a>
-    <a href="https://twitter.com/intent/tweet?text='{{ noticia.titulo }}' vía
-      {{ noticia.enlace }}" target="_blank" title="Compartir en Twitter">
-      <img src="/media/icons/tw_ico.png"/>
-    </a>
-
-    <a href="?p=imprimir&id={{ noticia.id }}" target="_blank" title="Imprimir">
-      <img src="/media/icons/print.png"/>
-    </a>
-
-  </div>
-  <!-- Enlaces -->
+{% block menu %}
+  <a class="navitem" href="/?p=inicio" title="Ir a inicio"><p class="center">Inicio</p></a>
+  <a class="navitem active" href="/?p=listado-noticias" title="Listado de noticias"><p class="center">Noticias</p></a>
+  <a class="navitem" href=#informacion title="Ir a información de contacto"><p class="center">Contacto</p></a>
+  <a class="navitem" href="/?p=inicio-sesion" title="Iniciar sesion"><p class="center">Iniciar sesión</p></a>
+{% endblock %}
 
 
-  <!-- Comentarios -->
-    <div class="seccion-comentarios">
-    <h2>Comentarios</h2>
+{% block principal %}
 
-    <div class="navitem comentario">
-      <form method="post" action="" >
-        <input type="text" name="comentario" maxlength="140" required
-        placeholder="Añade un comentario público..." autocomplete="off"></textarea>
-        <input class="boton" type="submit" value="Comentar"/>
-      </form>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/estilo_noticia.css">
+  </head>
+
+  <!-- NOTICIA: comienzo  -->
+  <div class="seccion-noticias">
+    <div class="noticia">
+
+      <article>
+        <header>
+          <h1>{{ noticia.titulo }}</h1>
+          <h2>Escrito por {{ noticia.autor }}</h2>
+            <h3>{{ noticia.fecha }}</h3>
+          <div class="contenedor-fila-2">
+            <h4>Etiquetas: {{ noticia.etiquetas }}</h4>
+            <h4>{{ noticia.visitas }} visitas</h4>
+          </div>
+          <div class="contenedor-imagen">
+            <a href="{{ noticia.enlace }}">
+              <img src="{{ noticia.imagen }}" alt=""/>
+            </a>
+          </div>
+
+          {% for parrafo in noticia.texto %}
+          <p class="parrafo">
+            {{  parrafo }}
+          </p>
+          {% endfor %}
+        </header>
+      </article>
+
     </div>
 
 
-    <div class="navitem comentario">
-      <div class="cabecera-comentario">
-        <h4>Usuario_predeterminado</h4>
-        <h5>dd/mm/yyyy hh:mm:ss</h5>
-      </div>
-      <div class="cuerpo">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
-    </div>
+    <!-- Enlaces -->
+    <div class="enlaces">
 
-    {% for item in noticia.comentarios %}
+      <a href="https://www.facebook.com/" target="_blank" title="Compartir en Facebook"
+        onclick="compartir('Twitter', '{{ noticia.titulo }}', '{{ noticia.imagen }}'); return false;">
+
+        <img src="/media/icons/fb_ico.png"/>
+      </a>
+      <a href="https://twitter.com/intent/tweet?text='{{ noticia.titulo }}' vía
+        {{ noticia.enlace }}" target="_blank" title="Compartir en Twitter">
+        <img src="/media/icons/tw_ico.png"/>
+      </a>
+
+      <a href="?p=imprimir&id={{ noticia.id }}" target="_blank" title="Imprimir">
+        <img src="/media/icons/print.png"/>
+      </a>
+
+    </div>
+    <!-- Enlaces -->
+
+
+    <!-- Comentarios -->
+      <div class="seccion-comentarios">
+      <h2>Comentarios</h2>
+
+      <div class="navitem comentario">
+        <form method="post" action="" >
+          <input type="text" name="comentario" maxlength="140" required
+          placeholder="Añade un comentario público..." autocomplete="off"></textarea>
+          <input class="boton" type="submit" value="Comentar"/>
+        </form>
+      </div>
+
+
       <div class="navitem comentario">
         <div class="cabecera-comentario">
-          <h4>{{ item.usuario }}</h4>
-          <h5>{{ item.fecha }}</h5>
+          <h4>Usuario_predeterminado</h4>
+          <h5>dd/mm/yyyy hh:mm:ss</h5>
         </div>
         <div class="cuerpo">
-          {{ item.texto }}
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
-    {% endfor %}
-  </div>
-  <!-- Comentarios -->
 
-</div>
+      {% for item in noticia.comentarios %}
+        <div class="navitem comentario">
+          <div class="cabecera-comentario">
+            <h4>{{ item.usuario }}</h4>
+            <h5>{{ item.fecha }}</h5>
+          </div>
+          <div class="cuerpo">
+            {{ item.texto }}
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+    <!-- Comentarios -->
+
+  </div>
 
 {% endblock %}
