--- a/css/estilo_registro.css
+++ b/css/estilo_registro.css
@@ -1,74 +1,70 @@
-/* body{
-    margin:0;
-    padding:0;
-    font-family: 'Courier New', Courier, monospace;
-    text-align: center;
 
-} */
-
-
-.login {
+.contenedor-form {
   background: rgba(80, 80, 80, 0.5);
   margin: 0 2.5%;
   width: 75%;
   display: flex;
-  background: rgba(80, 80, 80, 0.5);
   flex-direction: column;
   position: relative;
+  text-align: center;
 }
 
 .login > div {
   display: flex;
+  flex-direction: column;
   place-content: center;
-}
-
-.l1 {
-  height: 20%;
-}
-
-.l2 {
-  height: 80%;
 }
 
 h2 {
   width: unset !important;
+  text-decoration: underline;
+  font-size: xx-large;
 }
 
-
-/* input[type="text"],input[type="password"]{
-    outline:none;
-    padding: 20px;
-    display: block;
-    width: 300px;
-    border-radius: 3px;
-    border: 1px solid #eee;
-    margin: 20px auto;
-
+.contenedor-fila-2 {
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+  padding: 0% 15%;
 }
+
+.item-fila-2 {
+  width: 50%;
+}
+
+.formulario {
+  margin: 5%;
+  background: rgba(80, 80, 80, 0.5);
+  font-size: large;
+}
+
+.registro {
+  margin-top: 0%;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  padding: 1.5% 0%;
+  display: flex;
+  width: 50%;
+  border-radius: 5px;
+  border: 1px solid #eee;
+  margin: 2.5% 5%;
+  text-align: center;
+}
+
 input[type="submit"]{
-    padding: 10px;
-    color: #fff;
-    background: #0098cb;
-    width: 320px;
-    margin : 20px auto;
-    margin-top: 0;
-    border: 0;
-    border-radius: 3px;
-    cursor: pointer;
-}
-input[type="submit"]:hover{
-    background-color: #00b8eb;
+  padding: 1.5% 0%;
+  color: #fff;
+  background: #941429;
+  width: 50%;
+  margin: 2% 0%;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
-/* Header */
-/* header {
-    border-bottom: 2px solid #eee;
-    padding: 20px 0;
-    margin-bottom: 10px;
-    width: 100%;
-    text-align: center;
-  }
-  header a {
-    text-decoration: none;
-    color: #333;
-  } */
+input[type="submit"]:hover{
+  background-color: #460303;
+}
